--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  ul, ol {
+    list-style: revert;
+    padding-left: 25px;
+  }
+  blockquote {
+    border-left: 3px #ddd solid;
+    margin-left: 5px;
+    padding-left: 5px;
+  }
+  code {
+    background-color: #eee;
+    border-radius: 3px;
+    font-family: courier, monospace;
+    padding: 0 3px;
+  }
+}
+
+// tiptap placeholder
+.ProseMirror p.is-editor-empty:first-child::before {
+  content: attr(data-placeholder);
+  float: left;
+  color: #adb5bd;
+  pointer-events: none;
+  height: 0;
+}
